# ImageToText

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ocr.rs  ui.rs
