[package]
name = "image-to-text"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
rfd = "0.14"
image = "0.25"
arboard = "3.4"
tempfile = "3.8"
rusty-tesseract = "1.1"

[[bin]]
name = "image-to-text"
path = "src/main.rs"